# AlphaForge

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: dependencies.py  main.py  schemas.py  services.py
api/routers/: health.py  metrics.py  prices.py
db/: models.py  schema.sql  session.py
db/migrations/: 001_initial.sql
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BetaPanel.tsx  Layout.tsx  MetricsTable.tsx  PriceChart.tsx  TickerSelector.tsx  VolatilityChart.tsx
frontend/src/hooks/: useApi.ts
frontend/src/types/: index.ts
ingestion/: compute_betas.py  compute_metrics.py  constants.py  fetch_factors.py  fetch_prices.py  scheduler.py  utils.py
models/: beta.py  volatility.py
tests/: conftest.py  test_api.py  test_metrics.py
